attacks in training

--- a/epynet_cps/notebooks/attacks_yaml_generator.ipynb
+++ b/epynet_cps/notebooks/attacks_yaml_generator.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "removed-coordinate",
+   "execution_count": 38,
+   "id": "worthy-durham",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yaml"
+    "import yaml\n",
+    "import random"
    ]
   },
   {
    "cell_type": "raw",
-   "id": "binary-plasma",
+   "id": "pleasant-advisory",
    "metadata": {},
    "source": [
     "- name: attack1\n",
@@ -41,141 +42,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "virtual-cologne",
+   "execution_count": 88,
+   "id": "discrete-hungary",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_weeks_under_attack(n_weeks):\n",
-    "    pass"
+    "# Create single attack in dictionary format\n",
+    "def generate_single_attack_dict(name:str, attack_type:str, start:int, end:int, target:str, tags:list=None):\n",
+    "    attack_dict = {\n",
+    "        'name': name,\n",
+    "        'type': attack_type,\n",
+    "        'trigger': {\n",
+    "            'type': 'time',\n",
+    "            'start': start,\n",
+    "            'end': end\n",
+    "        },\n",
+    "        'tags': tags,\n",
+    "        'target': target\n",
+    "    }\n",
+    "    \n",
+    "    return attack_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "monetary-binary",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choice of tag to involve in the selected attack based on attack_type and target \n",
+    "def draw_attacked_tag_list(attack_type, target, tags_config):\n",
+    "    tags = []\n",
+    "    if attack_type == 'DOS':\n",
+    "        return None\n",
+    "    \n",
+    "    elif attack_type == 'MITM':\n",
+    "        # Get only one tag (modify to ask for multiple tags)\n",
+    "        n_sampels = 1\n",
+    "        sampled_tags = random.sample(tags_config[target], n_sampels)\n",
+    "        \n",
+    "        for tag in sampled_tags:\n",
+    "            var_name = tag['tag']\n",
+    "            prop = random.choice(tag['property'])\n",
+    "            value = random.choice(tag['value'])\n",
+    "        \n",
+    "            final_tag = {'tag': var_name, 'property': prop, 'value': value}\n",
+    "            tags.append(final_tag)\n",
+    "        \n",
+    "        return tags\n",
+    "        \n",
+    "    else:\n",
+    "        raise Exception(\"Wrong attack type!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "heard-frank",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Build daily attacks \n",
+    "def build_daily_attacks_list(attack_types:list, targets:list, tags_config:dict, presence_chance:float, \n",
+    "                             max_occurrences:int, episode_length:int, durations:list):\n",
+    "    daily_attacks = []\n",
+    "    \n",
+    "    presence_probability = random.uniform(0, 1)\n",
+    "    \n",
+    "    if presence_probability < presence_chance:\n",
+    "        n_attacks = random.randint(1, max_occurrences)\n",
+    "\n",
+    "        last_timestep = 0\n",
+    "        for i in range(n_attacks):\n",
+    "            name = 'attack_' + str(i)\n",
+    "            \n",
+    "            # Sample attack type\n",
+    "            attack_type = random.choice(attack_types)\n",
+    "            \n",
+    "            # Sample attack trigger\n",
+    "            duration = random.choice(durations)\n",
+    "            ith_lower_bound = (episode_length // n_attacks) * i\n",
+    "            lower_bound =ith_lower_bound if ith_lower_bound * i < last_timestep else last_timestep\n",
+    "            upper_bound = (episode_length // n_attacks) * i + (episode_length // n_attacks)\n",
+    "            start_time = random.randint(lower_bound, upper_bound - duration - 1)\n",
+    "            end_time = start_time + duration\n",
+    "            last_timestep = end_time\n",
+    "            \n",
+    "            # Sample attack target\n",
+    "            target = random.choice(targets)\n",
+    "            \n",
+    "            # Sample attacked tags based on type and target\n",
+    "            tags = draw_attacked_tag_list(attack_type, target, tags_config)\n",
+    "            \n",
+    "            # Append the attack to the list of daily attacks\n",
+    "            daily_attacks.append(generate_single_attack_dict(name=name, \n",
+    "                                                             attack_type=attack_type, \n",
+    "                                                             start=start_time, \n",
+    "                                                             end=end_time, \n",
+    "                                                             target=target, \n",
+    "                                                             tags=tags))\n",
+    "    return daily_attacks\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "accessible-scheduling",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate all the required yaml files, storing weekly attacks and\n",
+    "def generate_weeks_under_attack(n_weeks:int, attack_types:list, targets:list, tags_config:dict, presence_chance:float, \n",
+    "                                max_occurrences:int, episode_length:int, durations:list, where_to_store:str):\n",
+    "    yaml_dict = {}\n",
+    "    \n",
+    "    for week in range(n_weeks):\n",
+    "        attacks_list = build_daily_attacks_list(attack_types, targets, tags_config, presence_chance, max_occurrences,\n",
+    "                                               episode_length, durations)\n",
+    "        \n",
+    "        if attacks_list:\n",
+    "            #yaml_path = where_to_store + 'rand_attacks_' + str(week) + '.yaml'\n",
+    "            #with open(yaml_path, 'w') as fout:\n",
+    "            #    yaml.dump(attacks_list, fout)\n",
+    "            yaml_dict[week] = attacks_list\n",
+    "        \n",
+    "        else:\n",
+    "            yaml_dict[week] = None    \n",
+    "    \n",
+    "    index_file = 'scheduled_attacks_index.yaml'\n",
+    "    with open(index_file, 'w') as fout:\n",
+    "        yaml.dump(yaml_dict, fout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "accredited-profession",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_weeks = 156\n",
+    "attack_types = ['MITM', 'DOS']\n",
+    "targets = ['PLC2', 'PLC3']\n",
+    "tags_config = {'PLC2': [{'tag': 'T41', 'property': ['pressure'], 'value': [0.1, 10]}],\n",
+    "        'PLC3': [{'tag': 'T42', 'property': ['pressure'], 'value': [0.1, 10]}]}\n",
+    "max_occurrences = 6\n",
+    "durations = [28800, 43200, 57600, 86400]\n",
+    "episode_length = 604800\n",
+    "presence_chance = 0.5\n",
+    "where_to_store = 'scheduled_attacks/'\n",
+    "\n",
+    "\n",
+    "generate_weeks_under_attack(n_weeks=n_weeks, \n",
+    "                            attack_types=attack_types, \n",
+    "                            targets=targets, \n",
+    "                            tags_config=tags_config,\n",
+    "                            presence_chance=presence_chance, \n",
+    "                            max_occurrences=max_occurrences, \n",
+    "                            episode_length=episode_length, \n",
+    "                            durations=durations, \n",
+    "                            where_to_store=where_to_store)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surprised-cooking",
+   "id": "another-compiler",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "trigger = Schema(\n",
-    "    Or(\n",
-    "        {\n",
-    "            'type': And(\n",
-    "                str,\n",
-    "                Use(str.lower),\n",
-    "                'time'\n",
-    "            ),\n",
-    "            'start': And(\n",
-    "                int,\n",
-    "                Schema(lambda i: i >= 0, error=\"'start' must be positive.\"),\n",
-    "            ),\n",
-    "            'end': And(\n",
-    "                int,\n",
-    "                Schema(lambda i: i >= 0, error=\"'end' must be positive.\"),\n",
-    "            ),\n",
-    "        },\n",
-    "        {\n",
-    "            'type': And(\n",
-    "                str,\n",
-    "                Use(str.lower),\n",
-    "                Or('below', 'above')\n",
-    "            ),\n",
-    "            'sensor': And(\n",
-    "                str,\n",
-    "                string_pattern,\n",
-    "            ),\n",
-    "            'value': And(\n",
-    "                Or(float, And(int, Use(float))),\n",
-    "            ),\n",
-    "        },\n",
-    "        {\n",
-    "            'type': And(\n",
-    "                str,\n",
-    "                Use(str.lower),\n",
-    "                'between'\n",
-    "            ),\n",
-    "            'sensor': And(\n",
-    "                str,\n",
-    "                string_pattern,\n",
-    "            ),\n",
-    "            'lower_value': And(\n",
-    "                Or(float, And(int, Use(float))),\n",
-    "            ),\n",
-    "            'upper_value': And(\n",
-    "                Or(float, And(int, Use(float))),\n",
-    "            ),\n",
-    "        },\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "device_attacks = Schema({\n",
-    "    'name': And(\n",
-    "        str,\n",
-    "        attack_pattern,\n",
-    "    ),\n",
-    "    'trigger': trigger,\n",
-    "    'actuator': And(\n",
-    "        str,\n",
-    "        string_pattern,\n",
-    "    ),\n",
-    "    'command': And(\n",
-    "        str,\n",
-    "        Use(str.lower),\n",
-    "        Or('open', 'closed')\n",
-    "    )\n",
-    "})\n",
-    "\n",
-    "network_attacks = Schema(\n",
-    "    Or(\n",
-    "        {\n",
-    "            'type': And(\n",
-    "                str,\n",
-    "                Use(str.lower),\n",
-    "                'naive_mitm',\n",
-    "            ),\n",
-    "            'name': And(\n",
-    "                str,\n",
-    "                string_pattern,\n",
-    "                Schema(lambda name: 1 <= len(name) <= 10,\n",
-    "                       error=\"Length of name must be between 1 and 10, '{}' has invalid length\")\n",
-    "            ),\n",
-    "            'trigger': trigger,\n",
-    "            Or('value', 'offset', only_one=True,\n",
-    "               error=\"'tags' should have either a 'value' or 'offset' attribute.\"): Or(float, And(int, Use(float))),\n",
-    "            'target': And(\n",
-    "                str,\n",
-    "                string_pattern\n",
-    "            )\n",
-    "        },\n",
-    "        {\n",
-    "            'type': And(\n",
-    "                str,\n",
-    "                Use(str.lower),\n",
-    "                'mitm',\n",
-    "            ),\n",
-    "            'name': And(\n",
-    "                str,\n",
-    "                string_pattern,\n",
-    "                Schema(lambda name: 1 <= len(name) <= 10,\n",
-    "                       error=\"Length of name must be between 1 and 10, '{}' has invalid length\")\n",
-    "            ),\n",
-    "            'trigger': trigger,\n",
-    "            'target': And(\n",
-    "                str,\n",
-    "                string_pattern\n",
-    "            ),\n",
-    "            'tags': [{\n",
-    "                'tag': And(\n",
-    "                    str,\n",
-    "                    string_pattern,\n",
-    "                ),\n",
-    "                Or('value', 'offset', only_one=True,\n",
-    "                   error=\"'tags' should have either a 'value' or 'offset' attribute.\"): Or(float, And(int, Use(float))),\n",
-    "            }]\n",
-    "        }\n",
-    "    )\n",
-    ")"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "colonial-jackson",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "falling-anniversary",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
